<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateNewUserActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/createNewUserTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_user"
            android:textSize="35sp"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/createUsernameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/createUsernameEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/CreatePWTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/createPWEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>